mpegaudioparse: Fix buffer memory leak during failures

mapped buffer is not being unmapped during failures

https://bugzilla.gnome.org/show_bug.cgi?id=756231